# Bridge-Search

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  SKILL.md  bridge-search.config.anytxt-only.example.json  bridge-search.config.everything-and-anytxt.example.json  bridge-search.config.everything-only.example.json  bridge-search.config.example.json  bridge-search.config.relaxed.json  install.sh  pyproject.toml  requirements.txt  start-bridge-search.sh  wsl-windows-search-bridge.config.example.json  wsl-windows-search-bridge.config.relaxed.json
.github/: dependabot.yml
.github/workflows/: test.yml
bridge_search/: __init__.py  __main__.py  bridge_tools.py  config.py  constants.py  file_ops.py  health.py  path_policy.py  result_models.py  search_backends.py  server.py
config/: bridge-search.config.anytxt-only.example.json  bridge-search.config.everything-and-anytxt.example.json  bridge-search.config.everything-only.example.json  bridge-search.config.example.json  bridge-search.config.relaxed.json
references/: anytxt-endpoint-runtime-discovery.md  anytxt-http-api-notes.md  anytxt-path-prefix-proxy.md  setup_directive.md
scripts/: __init__.py  bridge_tools.py  config.py  file_ops.py  path_policy.py  rediscover_anytxt_endpoint.py  result_models.py  search_backends.py  server.py  setup_skill.py
tests/: test_bridge_tools.py  test_health.py
tests/fixtures/anytxt_wt/: README.md  live_bootstrap.js  live_root.html  live_vat201_no_files_response.js  meta.json
