# bridge-search — install runtime deps with: pip install -r requirements.txt
# Tests: pip install -r requirements-dev.txt && python3 -m pytest

[project]
name = "bridge-search"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = ["mcp==1.27.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
