# bridge-search — install runtime deps with: pip install -r requirements.txt
# Tests: pip install -r requirements-dev.txt && python3 -m pytest

[project]
name = "bridge-search"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = ["mcp==1.27.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bridge_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
