# bridge-search — install runtime deps with: pip install -r requirements.txt
# Tests: pip install -r requirements-dev.txt && python3 -m pytest

[project]
name = "bridge-search"
version = "0.2.0"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["mcp==1.27.0"]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bridge_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
